#50 EC2 variables to be per - env and make  main jenkins config.xml.j2.

--- a/ansible/roles/services/docker_CICD/templates/jenkins-master/config.xml.j2
+++ b/ansible/roles/services/docker_CICD/templates/jenkins-master/config.xml.j2
@@ -125,7 +125,7 @@
         </dockerHost>
         <connectTimeout>10</connectTimeout>
         <readTimeout>10</readTimeout>
-        <hostname>172.31.6.118</hostname>
+        <hostname>{{ ec2_metadata.instances[0].private_ip_address }}</hostname>
       </dockerApi>
       <containerCap>3</containerCap>
       <exposeDockerHost>false</exposeDockerHost>
